kube/charts/base-resources/ci/rs-httpRoutes-result.yaml
---
# Source: resources-test/templates/loader.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-release
  namespace: default
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: main-gateway
  rules:
  - backendRefs:
    - name: main-service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
